# OpenGLRenderer

./: .gitignore  CMakeLists.txt  README.md  commands.txt  imgui.ini  output.txt
include/: CMakeCache.txt  Camera.h  Core.h  Data.h  DeveloperWindow.h  ElementArray.h  GeometryData.h  IRenderable.h  ImGuiSystem.h  ImguiWidget.h  IndexBuffer.h  InputManager.h  Makefile  Materials.h  Mesh.h  Renderer.h  ResourceManager.h  Scene.h  Settings.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h  cmake_install.cmake
include/tests/: Test.h  Test3DBasics.h  TestClearColor.h  TestCore.h  TestLightCaster.h  TestLighting.h  TestLightingMaps.h  TestMaterials.h  TestShaders.h  TestSquare.h  TestTriangle.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: Basic.fs  Basic.vs  Caster.vs  CoreLight.vs  Cube.fs  Lighting.fs  Lighting.vs  LightingMaps.fs  LightingMaps.vs  MaterialCoreLight.vs  MaterialLighting.fs  MaterialLighting.vs  ShaderArt.fs  ShaderArt.vs  Square.fs  Square.vs  shader.fs  shader.vs  texShader.fs  texshader.fs  texshader.vs
src/: Camera.cpp  Core.cpp  DeveloperWindow.cpp  ElementArray.cpp  ImGuiSystem.cpp  IndexBuffer.cpp  InputManager.cpp  Mesh.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  main.cpp
src/tests/: Test.cpp  Test3DBasics.cpp  TestClearColor.cpp  TestLightCaster.cpp  TestLighting.cpp  TestLightingMaps.cpp  TestMaterials.cpp  TestShaders.cpp  TestSquare.cpp  TestTriangle.cpp
